update get cert detail